Fixed small overflow bug when revealing gameplay footage on click

--- a/css/game.css
+++ b/css/game.css
@@ -76,6 +76,7 @@ img.feature {
 
 .gallery .hover {
     position: absolute;
+    width: 100%;
     z-index: 2;
     opacity: 0;
     transition: opacity var(--transition-short);
@@ -87,6 +88,7 @@ img.feature {
 
 .gallery .item {
     position: absolute;
+    width: 100%;
     z-index: 0;
     opacity: 0;
     transition: opacity var(--transition-short);
